# docsrag

./: .env.example  .gitignore  Makefile  README.md  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  eval_regression.yml
api/: deps.py  main.py  models.py
api/routes/: eval.py  ingest.py  query.py
deploy/: Dockerfile  docker-compose.yml
docs/adr/: 001-chunking-strategy.md  002-hybrid-search.md  003-eval-methodology.md
eval/: __init__.py  harness.py  judge.py  metrics.py
eval/datasets/: sample_qa.json
generation/: generator.py  prompts.py
ingestion/: __init__.py  chunker.py  embedder.py  loader.py
migrations/: 001_init.sql
retrieval/: __init__.py  bm25_index.py  hybrid_search.py  query_rewriter.py  reranker.py  vector_store.py
scripts/: seed_sample_docs.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_chunker.py  test_hybrid_search.py  test_metrics.py
